[package]
name = "secure-chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8", features = ["macros", "ws"] }
lock_api = "0.4.13"
rand_core = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
rand = "0.8"
password-hash = "0.5"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
futures-util = "0.3.31"
chrono = "0.4.41"
log = "0.4.27"
flexi_logger = "0.31.2"
